# LaserCommunicate

./: .gitignore  Config.json  defaultConfig.json  main.js  package-lock.json  package.json
backend/: CMakeLists.txt  CMakeSettings.json  Config.json  README.md  vender-rule.json
backend/backend/: CMakeLists.txt  Modbus.hpp  SerialController.hpp  SerialPort.hpp  backend.cpp  backend.h
backend/backend/include/: Config.hpp  ConfigurationFileContent.hpp  DI.hpp  InterfaceController.hpp  InterfaceWrapper.hpp  Modbus.hpp  ModbusCache.hpp  SerialComController.hpp  SerialController.hpp  backend.h  utils.hpp
backend/backend/src/: InterfaceController.cpp  SerialComController.cpp  SerialController.cpp  SerialPort.cpp  backend.cpp  utils.cpp
backend/common/: backend.exe.vmp  pack.bat
fontend/: package-lock.json  package.json
fontend/public/: index.html
fontend/src/: App.vue  main.js
fontend/src/router/: index.js
fontend/src/rpc/: index.js
fontend/src/store/: index.js
fontend/src/views/: addevent.vue  constant.vue  table.vue  titleBar.vue
frontend/: package-lock.json  package.json
frontend-old/: package-lock.json  package.json
frontend-old/public/: index.html
frontend-old/src/: App.vue  main.js
frontend-old/src/components/: about.vue  titleBar.vue
frontend-old/src/http/: http.js  index.js
frontend-old/src/store/: index.js
frontend-old/src/views/: addRule.vue  constant.vue  table.vue  temperature.vue
frontend/public/: index.html
frontend/src/: App.vue  main.js
frontend/src/components/: navigateBar.vue  titleBar.vue
(+5 files in other folders)
